--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -836,6 +836,7 @@ cd ../../..
 ```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
 
 params <- read.table("selection/single-pop/simple_bgs/single_neutral/params.csv", sep=",", header=T)
+n_models <- nrow(params)
 hr_BGS <- numeric(length=n_models)
 factors <- numeric(length=n_models)
 
@@ -911,7 +912,7 @@ p3 <- p3 + theme(axis.title=element_text(size=16),
                  legend.position="bottom")
 
 bgs_plot <- plot_grid(p1, p2, p3, ncol=1, rel_heights=c(1.15, 1, 1.25))
-save_plot("selection/single-pop/simple_bgs/single_neutral/bgs_1.pdf", bgs_plot, base_height=12, base_width=16)
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_1.pdf", bgs_plot, base_height=12, base_width=16)
 
 p4 <- ggplot(data=params[params$u==1e-9,], aes(x=s, y=factors, color=as.factor(N)))
 p4 <- p4 + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
@@ -959,7 +960,7 @@ p6 <- p6 + theme(axis.title=element_text(size=16),
                  legend.position="bottom")
 
 bgs_plot_2 <- plot_grid(p4, p5, p6, ncol=1, rel_heights=c(1.15, 1, 1.25))
-save_plot("selection/single-pop/simple_bgs/single_neutral/bgs_2.pdf", bgs_plot_2, base_height=12, base_width=15)
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_2.pdf", bgs_plot_2, base_height=12, base_width=15)
 
 names(factors_tbl) <- 1:ncol(factors_tbl)
 windows <- bind_cols(params, factors_tbl)
@@ -976,7 +977,7 @@ p7 <- p7 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 
-save_plot("selection/single-pop/simple_bgs/single_neutral/bgs_3.pdf", p7, base_height=12, base_width=20)
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_3.pdf", p7, base_height=12, base_width=20)
 
 p8 <- ggplot(data=molten_windows[molten_windows$u==1e-8,], aes(x=window, y=value, color=as.factor(s)))
 p8 <- p8 + geom_point(size=1) + facet_grid(N~r) + theme_bw()
@@ -988,7 +989,7 @@ p8 <- p8 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 
-save_plot("selection/single-pop/simple_bgs/single_neutral/bgs_4.pdf", p8, base_height=12, base_width=20)
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_4.pdf", p8, base_height=12, base_width=20)
 
 p9 <- ggplot(data=molten_windows[molten_windows$u==1e-7,], aes(x=window, y=value, color=as.factor(s)))
 p9 <- p9 + geom_point(size=1) + facet_grid(N~r) + theme_bw()
@@ -1000,8 +1001,7 @@ p9 <- p9 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 
-save_plot("selection/single-pop/simple_bgs/single_neutral/bgs_5.pdf", p9, base_height=12, base_width=20)
-
+save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_5.pdf", p9, base_height=12, base_width=20)
 ```
 
 ## Multiple Neutral Loci
@@ -1101,12 +1101,15 @@ cd ../../..
 ```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
 
 params <- read.table("selection/single-pop/simple_bgs/mult_neutral/params.csv", sep=",", header=T)
+n_models <- nrow(params)
 w <- 100
 
 # for landscape plots
 hr_tbl <- as.data.frame(matrix(nrow=n_models, ncol=w))
 
 for(i in 1:n_models) {
+  
+  cat(paste("Retrieving data from model ", i, "...\n"))
   
   for(j in 1:w) { # right locus
     
@@ -1132,7 +1135,6 @@ windows <- bind_cols(params, hr_tbl)
 molten_windows <- pivot_longer(windows, cols=(ncol(params) + 1):ncol(windows), names_to="window")
 molten_windows$window <- as.numeric(molten_windows$window)
 
-
 p1 <- ggplot(data=molten_windows[molten_windows$u==1e-9,], aes(x=window, y=value, color=as.factor(alpha)))
 p1 <- p1 + geom_point(size=1) + facet_wrap(~r, nrow=1) + theme_bw()
 p1 <- p1 + scale_x_discrete(breaks=pretty_breaks())
@@ -1144,7 +1146,7 @@ p1 <- p1 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 
-save_plot("selection/single-pop/simple_bgs/single_neutral/bgs_6.pdf", p1, base_height=12, base_width=20)
+save_plot("selection/single-pop/simple_bgs/bgs_mult_neutral_1.pdf", p1, base_height=12, base_width=20)
 
 p2 <- ggplot(data=molten_windows[molten_windows$u==1e-8,], aes(x=window, y=value, color=as.factor(alpha)))
 p2 <- p2 + geom_point(size=1) + facet_wrap(~r, nrow=1) + theme_bw()
@@ -1157,7 +1159,7 @@ p2 <- p2 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 
-save_plot("selection/single-pop/simple_bgs/single_neutral/bgs_7.pdf", p2, base_height=12, base_width=20)
+save_plot("selection/single-pop/simple_bgs/bgs_mult_neutral_2.pdf", p2, base_height=12, base_width=20)
 
 p3 <- ggplot(data=molten_windows[molten_windows$u==1e-7,], aes(x=window, y=value, color=as.factor(alpha)))
 p3 <- p3 + geom_point(size=1) + facet_wrap(~r, nrow=1) + theme_bw()
@@ -1170,16 +1172,15 @@ p3 <- p3 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 
-save_plot("selection/single-pop/simple_bgs/single_neutral/bgs_8.pdf", p3, base_height=12, base_width=20)
+save_plot("selection/single-pop/simple_bgs/bgs_mult_neutral_3.pdf", p3, base_height=12, base_width=20)
 ```
 
 # BGS with Mutation rate variation
 
 ### Building Demes files
 
-```{r, demes-BGS, include=F, eval=T, results=F, message=F, warning=F}
+```{r, demes-BGS-1, include=F, eval=T, results=F, message=F, warning=F}
 
-# TODO add change in N over history
 N <- c(1000, 10000)
 # number of independent genomic windows, each corresponding to a two-locus system
 w <- 100
@@ -1187,13 +1188,13 @@ w <- 100
 l <- c(100, 1000)
 # Gamma dist params
 # DFE
-scale_sel <- c(0.0001, 0.0005)
+scale_sel <- c(1e-5, 1e-4, 5e-4)
 shape_sel <- 20
 # mut rates
-scales_mu <- c(1e-8, 1e-9)
-shapes_mu <- c(1, 3, 10, 1000000)
+scales_mu <- c(1e-7, 1e-8, 1e-9)
+shapes_mu <- c(1, 3, 10, 50, 1000000)
 # rec rates
-scales_rec <- c(1e-6, 1e-7, 1e-8, 1e-9)
+scales_rec <- c(1e-4, 1e-5, 1e-6, 1e-7, 1e-8, 0)
 shapes_rec <- c(1, 3, 10, 1000000)
 
 params <- crossing(N, w, l, shape_sel, scale_sel, shapes_mu, scales_mu, shapes_rec, scales_rec)
@@ -1203,6 +1204,24 @@ n_models <- nrow(params)
 write.csv(params, "selection/single-pop/mut_rate_var/params.csv", quote=F, row.names=F)
 
 Sys.setenv(num_models=n_models)
+Sys.setenv(w=w)
+```
+
+```{bash make_dirs, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+
+source ~/.bashrc
+
+cd selection/single-pop/mut_rate_var/
+
+for((i=1;i<=n_models;i++));
+do
+  mkdir model_$i
+done
+
+cd ../../..
+```
+
+```{r, demes-BGS-2, include=F, eval=T, results=F, message=F, warning=F}
 
 for(i in 1:n_models) {
   
@@ -1231,7 +1250,7 @@ for(i in 1:n_models) {
   windows$pi0 <- 2 * params$N[i] * windows$mus
   windows$alpha <- alpha
   
-  write.csv(windows, paste("selection/single-pop/mut_rate_var/model_", i, "_windows.csv", sep=""), quote=F, row.names=F)
+  write.csv(windows, paste("selection/single-pop/mut_rate_var/model_", i, "/_windows.csv", sep=""), quote=F, row.names=F)
   
   for(j in 1:w) { # left locus
     
@@ -1241,7 +1260,7 @@ for(i in 1:n_models) {
       total_r <- colSums(windows[j:k,])["recs"]
       
       name <- paste("model_", i, "_l_", j, "_r_", k, sep="")
-      sink(paste("selection/single-pop/mut_rate_var/", name, ".yaml", sep=""))
+      sink(paste("selection/single-pop/mut_rate_var/model_", i, "/", name, ".yaml", sep=""))
       
       cat("time_units: generations\n")
       cat("demes:\n")
@@ -1290,9 +1309,17 @@ source ~/.bashrc
 
 cd selection/single-pop/mut_rate_var/
 
-for m in *.yaml
+for((i=1;i<=n_models;i++));
 do
-  momentspp params=opt.bpp F=$m O=20
+  cp opt.bpp model_$i
+  cd model_$i
+  
+  for m in *.yaml
+  do
+    momentspp params=opt.bpp F=$m O=20
+  done
+  
+  cd ..
 done
 
 cd ../../..
@@ -1302,13 +1329,19 @@ cd ../../..
 
 ```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
 
-r2 <- as.data.frame(matrix(nrow = n_models, ncol = 4))
-colnames(r2) <- c("Total", "Mutation", "Recombination", "Selection")
+params <- read.table("selection/single-pop/mut_rate_var/params.csv", sep=",", header=T)
+n_models <- nrow(params)
+hr_BGS <- numeric(length=n_models)
+landscapes <- as.data.frame(matrix(nrow=n_models, ncol=w))
+
+r2 <- as.data.frame(matrix(nrow=n_models, ncol=6))
+colnames(r2) <- c("Total_R2", "Mutation_R2", "Recombination_R2", "Selection_R2", "Mu:Sel_R2", "Rec:Sel_R2")
 
 for(i in 1:n_models) {
   
+  cat(paste("Retrieving data from model ", i, "...\n"))
+  
   windows <- read.csv(paste("selection/single-pop/mut_rate_var/model_", i, "_windows.csv", sep=""), header=T)
-  w <- nrow(windows)
   hr_BGS <- numeric(length=w)
   
   for(j in 1:w) { # right locus
@@ -1319,7 +1352,7 @@ for(i in 1:n_models) {
     for(k in 1:w) { # left locus
       
       name <- paste("model_", i, "_l_", k, "_r_", j, "_expectations.txt", sep="")
-      expectations <- read.table(paste("selection/single-pop/mut_rate_var/", name, sep=""))
+      expectations <- read.table(paste("selection/single-pop/mut_rate_var/model_", i, "/", name, sep=""))
       
       hr <- expectations[expectations$V1 == "Hr_0_0",]$V3
       one_minus_f[k] <- hr / pi0
@@ -1328,8 +1361,59 @@ for(i in 1:n_models) {
     hr_BGS[j] <- pi0 * prod(one_minus_f)
   }
   
+  landscapes[i,] <- hr_BGS
   windows$hr_BGS <- hr_BGS
 
+  windows$bin <- 1:nrow(windows)
+  molten_bins <- pivot_longer(windows, cols=c("mus", "recs", "alpha", "pi0", "hr_BGS"), names_to="variable")
+  
+  p1 <- ggplot(data=windows, aes(x=bin, y=hr_BGS))
+  p1 <- p1 + geom_line() + theme_bw()
+  p1 <- p1 + scale_x_discrete(breaks=pretty_breaks())
+  p1 <- p1 + scale_y_continuous(breaks=pretty_breaks())
+  p1 <- p1 + labs(title=NULL, x=NULL, y=expression(H[r]))
+  p1 <- p1 + theme(axis.title=element_text(size=16),
+                   axis.text=element_text(size=12),
+                   axis.text.y=element_blank(),
+                   axis.ticks=element_blank(),
+                   axis.title.x=element_blank())
+  
+  p2 <- ggplot(data=windows, aes(x=bin, y=mus))
+  p2 <- p2 + geom_line() + theme_bw()
+  p2 <- p2 + scale_x_discrete(breaks=pretty_breaks())
+  p2 <- p2 + scale_y_continuous(breaks=pretty_breaks())
+  p2 <- p2 + labs(title=NULL, x=NULL, y=expression(mu))
+  p2 <- p2 + theme(axis.title=element_text(size=16),
+                   axis.text=element_text(size=12),
+                   axis.text.y=element_blank(),
+                   axis.ticks=element_blank(),
+                   axis.title.x=element_blank())
+  
+  p3 <- ggplot(data=windows, aes(x=bin, y=recs))
+  p3 <- p3 + geom_line() + theme_bw()
+  p3 <- p3 + scale_x_discrete(breaks=pretty_breaks())
+  p3 <- p3 + scale_y_continuous(breaks=pretty_breaks())
+  p3 <- p3 + labs(title=NULL, x=NULL, y=expression(r))
+  p3 <- p3 + theme(axis.title=element_text(size=16),
+                   axis.text=element_text(size=12),
+                   axis.text.y=element_blank(),
+                   axis.ticks=element_blank(),
+                   axis.title.x=element_blank())
+  
+  p4 <- ggplot(data=windows, aes(x=bin, y=alpha))
+  p4 <- p4 + geom_line() + theme_bw()
+  p4 <- p4 + scale_x_discrete(breaks=pretty_breaks())
+  p4 <- p4 + scale_y_continuous(breaks=pretty_breaks())
+  p4 <- p4 + labs(title=NULL, x=NULL, y=expression(alpha))
+  p4 <- p4 + theme(axis.title=element_text(size=16),
+                   axis.text=element_text(size=12),
+                   axis.text.y=element_blank(),
+                   axis.ticks=element_blank(),
+                   axis.title.x=element_blank())
+  
+  comb <- plot_grid(p1, p2, p3, p4, ncol=1)
+  save_plot(paste("selection/single-pop/mut_rate_var/model_", i, "/model_", i, "_landscapes.pdf", sep=""), comb, base_height=10, base_width=12)
+      
   # standardizing
   windows$ss_pi_BGS <- (windows$hr_BGS - mean(windows$hr_BGS)) / sd(windows$hr_BGS)
   windows$ss_pi0 <- (windows$pi0 - mean(windows$pi0)) / sd(windows$pi0)
@@ -1337,7 +1421,7 @@ for(i in 1:n_models) {
   windows$ss_recs <- (windows$recs - mean(windows$recs)) / sd(windows$recs)
   windows$ss_dfe <- (windows$dfe - mean(windows$dfe)) / sd(windows$dfe)
   
-  m.pi.1 <- lm(ss_pi_BGS ~ ss_mus + ss_recs + ss_dfe, data = windows)
+  m.pi.1 <- lm(ss_pi_BGS ~ ss_mus + ss_recs + ss_dfe + ss_mus:ss_dfe + ss_recs:ss_dfe, data=windows)
   
   summary(m.pi.1)
   vif(m.pi.1)
@@ -1346,26 +1430,148 @@ for(i in 1:n_models) {
   apiss <- anova.pi$"Sum Sq"
   anova.pi$VarExp <- apiss / sum(apiss)
 
-  r2[i, 1] <- (anova.pi$VarExp[1] + anova.pi$VarExp[2] + anova.pi$VarExp[3] + anova.pi$VarExp[4]) * 100
+  r2[i, 1] <- (anova.pi$VarExp[1] + anova.pi$VarExp[2] + anova.pi$VarExp[3] + anova.pi$VarExp[4] + anova.pi$VarExp[5] + anova.pi$VarExp[6]) * 100
   r2[i, 2] <- anova.pi$VarExp[1] * 100
   r2[i, 3] <- anova.pi$VarExp[2] * 100
   r2[i, 4] <- anova.pi$VarExp[3] * 100
+  r2[i, 5] <- anova.pi$VarExp[3] * 100
+  r2[i, 6] <- anova.pi$VarExp[3] * 100
 }
 
-tbl <- bind_cols(params, r2)
-molten_tbl <- pivot_longer(tbl, cols=c("Total", "Mutation", "Recombination", "Selection"), names_to="variable")
+summaries <- bind_cols(means_mu, vars_mu, means_rec, vars_rec, means_sel, vars_sel)
+names(summaries) <- c("means_mu", "vars_mu", "means_rec", "vars_rec", "means_sel", "vars_sel")
+names(landscapes) <- 1:ncol(landscapes)
 
-r2_plot <- ggplot(data = molten_tbl, aes(x = bin.size, y = value, shape = variable))
-r2_plot <- r2_plot + geom_line(data = molten_tbl) + facet_grid(rho ~ mu_block) 
-r2_plot <- r2_plot + geom_point(aes(shape = variable), size = 4)
-r2_plot <- r2_plot + scale_shape_manual(values = c(0, 1, 2, 8), name = "",
-                                        labels = c("Total", expression(mu), expression(r), expression(alpha)))
-r2_plot <- r2_plot + scale_x_continuous(breaks = c(50, 200, 1000), limits = c(40, 1200), trans="log10") 
-r2_plot <- r2_plot + scale_y_continuous(breaks = pretty_breaks())
-r2_plot <- r2_plot + labs(title = NULL, x = "Bin Size (kb)", y = "Variance Explained (%)") + theme_bw()
-r2_plot <- r2_plot + theme(axis.title = element_text(size = 16), axis.text = element_text(size = 12), 
-                           strip.text.x = element_text(size = 16), strip.text.y = element_text(size = 16),
-                          legend.text=element_text(size=16), legend.position = "bottom")
+tbl <- bind_cols(params, summaries, r2, landscapes)
+tbl$scale_sel <- -tbl$scale_sel
+molten_windows <- pivot_longer(tbl, cols=(ncol(params) + ncol(summaries) + ncol(r2) + 1):ncol(tbl), names_to="window")
+molten_windows$window <- as.numeric(molten_windows$window)
+
+# visualizing raw landscapes
+c=1
+for(i in unique(molten_windows$N)) {
+  for(j in unique(molten_windows$scales_mu)) {
+    for(k in unique(molten_windows$scales_rec)) {
+      
+      p <- ggplot(data=filter(molten_windows, N==i, scales_mu==j, scales_rec==k), aes(x=window, y=value, color=as.factor(scale_sel)))
+      p <- p + geom_line() + facet_grid(shapes_rec~shapes_mu) + theme_bw()
+      p <- p + scale_x_discrete(breaks=pretty_breaks())
+      p <- p + scale_y_continuous(breaks=pretty_breaks())
+      p <- p + labs(title=paste("Hr landscapes, N=", i, ", mu=", j, ", r=", k, " cols~1/var_mu, rows~1/var_rec", sep=""), x="Window", y=expression(H[r]))
+      p <- p + theme(axis.title=element_text(size=16),
+                     axis.text=element_text(size=12),
+                     axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                     legend.position="bottom")
+      save_plot(paste("selection/single-pop/Hr_landscapes_", c, ".pdf", sep=""), p, base_height=10, base_width=15)
+      
+      c <- c + 1
+    }
+  }
+}
+
+# zooming in plots with tiny mut rate variation
+p1 <- ggplot(data=filter(molten_windows, N==1000, shapes_mu==1e+6, scales_mu==1e-9), aes(x=window, y=value, shape=variable, color=as.factor(scale_sel)))
+p1 <- p1 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
+p1 <- p1 + scale_x_discrete(breaks=pretty_breaks())
+p1 <- p1 + scale_y_continuous(breaks=pretty_breaks())
+p1 <- p1 + labs(title="Hr landscapes, N=1000, shape_mu=1e+6, scale_mu=1e-9, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
+p1 <- p1 + theme(axis.title=element_text(size=16),
+               axis.text=element_text(size=12),
+               axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+               legend.position="bottom")
+save_plot("selection/single-pop/Hr_landscapes_17.pdf", p1, base_height=10, base_width=15)
+
+p2 <- ggplot(data=filter(molten_windows, N==1000, shapes_mu==1e+6, scales_mu==1e-8), aes(x=window, y=value, color=as.factor(scale_sel)))
+p2 <- p2 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
+p2 <- p2 + scale_x_discrete(breaks=pretty_breaks())
+p2 <- p2 + scale_y_continuous(breaks=pretty_breaks())
+p2 <- p2 + labs(title="Hr landscapes, N=1000, shape_mu=1e+6, scale_mu=1e-8, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
+p2 <- p2 + theme(axis.title=element_text(size=16),
+               axis.text=element_text(size=12),
+               axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+               legend.position="bottom")
+save_plot("selection/single-pop/Hr_landscapes_18.pdf", p2, base_height=10, base_width=15)
+
+p3 <- ggplot(data=filter(molten_windows, N==10000, shapes_mu==1e+6, scales_mu==1e-9), aes(x=window, y=value, color=as.factor(scale_sel)))
+p3 <- p3 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
+p3 <- p3 + scale_x_discrete(breaks=pretty_breaks())
+p3 <- p3 + scale_y_continuous(breaks=pretty_breaks())
+p3 <- p3 + labs(title="Hr landscapes, N=10000, shape_mu=1e+6, scale_mu=1e-9, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
+p3 <- p3 + theme(axis.title=element_text(size=16),
+               axis.text=element_text(size=12),
+               axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+               legend.position="bottom")
+save_plot("selection/single-pop/Hr_landscapes_19.pdf", p3, base_height=10, base_width=15)
+
+p4 <- ggplot(data=filter(molten_windows, N==10000, shapes_mu==1e+6, scales_mu==1e-8), aes(x=window, y=value, color=as.factor(scale_sel)))
+p4 <- p4 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
+p4 <- p4 + scale_x_discrete(breaks=pretty_breaks())
+p4 <- p4 + scale_y_continuous(breaks=pretty_breaks())
+p4 <- p4 + labs(title="Hr landscapes, N=10000, shape_mu=1e+6, scale_mu=1e-8, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
+p4 <- p4 + theme(axis.title=element_text(size=16),
+               axis.text=element_text(size=12),
+               axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+               legend.position="bottom")
+save_plot("selection/single-pop/Hr_landscapes_20.pdf", p4, base_height=10, base_width=15)
+
+# visualizing R^2
+molten_tbl <- pivot_longer(tbl, cols=c("Total_R2", "Mutation_R2", "Recombination_R2", "Selection_R2"), names_to="variable")
+
+p5 <- ggplot(data=filter(molten_tbl, N==1000, scales_mu==1e-9), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
+p5 <- p5 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
+p5 <- p5 + geom_point(aes(shape=variable), size=4)
+p5 <- p5 + scale_shape_manual(values=c(0, 1, 2, 8), name = "",
+                              labels=c(expression(mu), expression(r), expression(alpha), "Total"))
+p5 <- p5 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
+p5 <- p5 + scale_y_continuous(breaks=pretty_breaks())
+p5 <- p5 + labs(title = "Var Explained, N=1000, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
+p5 <- p5 + theme(axis.title=element_text(size=16), 
+                 axis.text=element_text(size=12), 
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.text=element_text(size=16), legend.position="bottom")
+save_plot("selection/single-pop/R2_plot_1.pdf", p5, base_height=10, base_width=15)
+
+p6 <- ggplot(data=filter(molten_tbl, N==1000, scales_mu==1e-8), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
+p6 <- p6 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
+p6 <- p6 + geom_point(aes(shape=variable), size=4)
+p6 <- p6 + scale_shape_manual(values=c(0, 1, 2, 8), name = "",
+                              labels=c(expression(mu), expression(r), expression(alpha), "Total"))
+p6 <- p6 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
+p6 <- p6 + scale_y_continuous(breaks=pretty_breaks())
+p6 <- p6 + labs(title = "Var Explained, N=1000, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
+p6 <- p6 + theme(axis.title=element_text(size=16), 
+                 axis.text=element_text(size=12), 
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.text=element_text(size=16), legend.position="bottom")
+save_plot("selection/single-pop/R2_plot_2.pdf", p6, base_height=10, base_width=15)
+
+p7 <- ggplot(data=filter(molten_tbl, N==10000, scales_mu==1e-9), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
+p7 <- p7 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
+p7 <- p7 + geom_point(aes(shape=variable), size=4)
+p7 <- p7 + scale_shape_manual(values=c(0, 1, 2, 8), name = "",
+                              labels=c(expression(mu), expression(r), expression(alpha), "Total"))
+p7 <- p7 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
+p7 <- p7 + scale_y_continuous(breaks=pretty_breaks())
+p7 <- p7 + labs(title = "Var Explained, N=10000, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
+p7 <- p7 + theme(axis.title=element_text(size=16), 
+                 axis.text=element_text(size=12), 
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.text=element_text(size=16), legend.position="bottom")
+save_plot("selection/single-pop/R2_plot_3.pdf", p7, base_height=10, base_width=15)
+
+p8 <- ggplot(data=filter(molten_tbl, N==10000, scales_mu==1e-8), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
+p8 <- p8 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
+p8 <- p8 + geom_point(aes(shape=variable), size=4)
+p8 <- p8 + scale_shape_manual(values=c(0, 1, 2, 8), name = "",
+                              labels=c(expression(mu), expression(r), expression(alpha), "Total"))
+p8 <- p8 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
+p8 <- p8 + scale_y_continuous(breaks=pretty_breaks())
+p8 <- p8 + labs(title = "Var Explained, N=10000, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
+p8 <- p8 + theme(axis.title=element_text(size=16), 
+                 axis.text=element_text(size=12), 
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.text=element_text(size=16), legend.position="bottom")
+save_plot("selection/single-pop/R2_plot_4.pdf", p8, base_height=10, base_width=15)
 
 # TODO
 # plot R^2 mut as a function of the variance of the Gamma distribution of mu,
@@ -1774,104 +1980,3 @@ p8
 ```
 
 ## Migration (TODO)
-
-# Check-my-matrix
-
-```{python check-my-matrix, include=F, eval=F, results=F}
-
-import moments.LD
-import demes
-import csv
-import numpy as np
-
-np.set_printoptions(threshold=10000)
-
-def pulse_migration(num_pops, pop0, pop1, f):
-    """
-    Pulse migration from pop0 into pop1 with proportion f.
-    """
-    # create the matrix that would build a new population via admixture
-    A = moments.LD.Matrices.admix_ld(num_pops, pop0, pop1, f)
-    # the last population created replaces pop1
-    mom_from = moments.LD.Util.moment_names(num_pops + 1)[0]
-    mom_to = moments.LD.Util.moment_names(num_pops)[0]
-    P = np.zeros((len(mom_to), len(mom_from)))
-    for i, m in enumerate(mom_to):
-        l = m.split("_")
-        for k in range(1, len(l)):
-            if l[k] == str(pop1):
-                l[k] = str(num_pops)
-        m_from = "_".join(l)
-        m_from = moments.LD.Util.map_moment(m_from)
-        j = mom_from.index(m_from)
-        P[i, j] = 1
-    return P.dot(A)
-
-# some hard coding never hurt anyone...  
-mat_LD = pulse_migration(3, 0, 1, 0.3)
-matpp = np.loadtxt('multi_epoch/model_2_e_6_admix.csv', delimiter=",")
-
-print(((matpp - mat_LD)).sum())
-print(((matpp - mat_LD)**2).sum())
-
-mat_LD = pulse_migration(4, 0, 3, 0.2)
-matpp = np.loadtxt('multi_epoch/model_3_e_5_admix.csv', delimiter=",")
-print(((matpp - mat_LD)).sum())
-print(((matpp - mat_LD)**2).sum())
-
-for i in range(len(mat_LD)):
-    if np.abs(mat_LD[i] - matpp[i]).sum() > 1e-15:
-        print(i, moments.LD.Util.moment_names(4)[0][i], np.abs(mat_LD[i] - matpp[i]).sum())
-        print(mat_LD[i])
-        print(matpp[i])
-
-mat_LD = pulse_migration(5, 2, 4, 0.5)
-matpp = np.loadtxt('multi_epoch/model_15_e_9_admix.csv', delimiter=",")
-print(((matpp - mat_LD)).sum())
-print(((matpp - mat_LD)**2).sum())
-
-for i in range(len(mat_LD)):
-    if np.abs(mat_LD[i] - matpp[i]).sum() > 1e-15:
-        print(i, moments.LD.Util.moment_names(5)[0][i], np.abs(mat_LD[i] - matpp[i]).sum())
-        print(mat_LD[i])
-        print(matpp[i])
-
-mig_mat = [ 
-        [0, 1e-4, 0],
-        [0, 0, 0],
-        [0, 0, 0]
-        ]
-
-matpp = np.loadtxt('multi_epoch/model_2_e_5_mig.csv', delimiter=",")
-mat_LD = moments.LD.Matrices.migration_ld(3, 2 * mig_mat).todense()
-#print(matpp - mat_LD)
-print(((matpp - mat_LD)).sum())
-print(((matpp - mat_LD)**2).sum())
-
-for i in range(len(mat_LD)):
-    if np.abs(mat_LD[i] - matpp[i]).sum() > 1e-15:
-        print(i, moments.LD.Util.moment_names(5)[0][i], np.abs(mat_LD[i] - matpp[i]).sum())
-        print(mat_LD[i])
-        print(matpp[i])
-
-mig_mat = [ 
-        [0, 0, 0, 0, 0],
-        [0, 0, 0, 0, 0],
-        [0, 0, 0, 0, 0],
-        [0, 0, 0, 0, 0],
-        [0, 0, 1e-4, 0, 0]
-        ]
-
-matpp = np.loadtxt('multi_epoch/model_15_e_10_mig.csv', delimiter=",")
-mat_LD = moments.LD.Matrices.migration_ld(5, 2 * mig_mat).todense()
-#print(matpp - mat_LD)
-print(((matpp - mat_LD)).sum())
-print(((matpp - mat_LD)**2).sum())
-
-for i in range(len(mat_LD)):
-    if np.abs(mat_LD[i] - matpp[i]).sum() > 1e-15:
-        print(i, moments.LD.Util.moment_names(5)[0][i], np.abs(mat_LD[i] - matpp[i]).sum())
-        print(mat_LD[i])
-        print(matpp[i])
-```
-
