--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -1192,10 +1192,10 @@ scale_sel <- c(1e-5, 1e-4, 5e-4)
 shape_sel <- 20
 # mut rates
 scales_mu <- c(1e-7, 1e-8, 1e-9)
-shapes_mu <- c(1, 3, 10, 50, 1000000)
+shapes_mu <- c(1, 3, 10, 30, 100, 1000000)
 # rec rates
 scales_rec <- c(1e-4, 1e-5, 1e-6, 1e-7, 1e-8, 0)
-shapes_rec <- c(1, 3, 10, 1000000)
+shapes_rec <- c(0.1, 1, 10, 1000000)
 
 params <- crossing(N, w, l, shape_sel, scale_sel, shapes_mu, scales_mu, shapes_rec, scales_rec)
 params$scenario <- 1:nrow(params)
@@ -1424,7 +1424,6 @@ for(i in 1:n_models) {
   m.pi.1 <- lm(ss_pi_BGS ~ ss_mus + ss_recs + ss_dfe + ss_mus:ss_dfe + ss_recs:ss_dfe, data=windows)
   
   summary(m.pi.1)
-  vif(m.pi.1)
 
   anova.pi <- Anova(m.pi.1)
   apiss <- anova.pi$"Sum Sq"
@@ -1438,13 +1437,12 @@ for(i in 1:n_models) {
   r2[i, 6] <- anova.pi$VarExp[3] * 100
 }
 
-summaries <- bind_cols(means_mu, vars_mu, means_rec, vars_rec, means_sel, vars_sel)
-names(summaries) <- c("means_mu", "vars_mu", "means_rec", "vars_rec", "means_sel", "vars_sel")
 names(landscapes) <- 1:ncol(landscapes)
-
-tbl <- bind_cols(params, summaries, r2, landscapes)
+tbl <- bind_cols(params, r2, landscapes)
 tbl$scale_sel <- -tbl$scale_sel
-molten_windows <- pivot_longer(tbl, cols=(ncol(params) + ncol(summaries) + ncol(r2) + 1):ncol(tbl), names_to="window")
+write.csv(tbl, "selection/single-pop/mut_rate_var/tbl.csv", quote=F, row.names=F)
+
+molten_windows <- pivot_longer(tbl, cols=(ncol(params) + ncol(r2) + 1):ncol(tbl), names_to="window")
 molten_windows$window <- as.numeric(molten_windows$window)
 
 # visualizing raw landscapes
@@ -1515,13 +1513,13 @@ p4 <- p4 + theme(axis.title=element_text(size=16),
 save_plot("selection/single-pop/Hr_landscapes_20.pdf", p4, base_height=10, base_width=15)
 
 # visualizing R^2
-molten_tbl <- pivot_longer(tbl, cols=c("Total_R2", "Mutation_R2", "Recombination_R2", "Selection_R2"), names_to="variable")
+molten_tbl <- pivot_longer(tbl, cols=c("Total_R2", "Mutation_R2", "Recombination_R2", "Selection_R2", "Mu:Sel_R2", "Rec:Sel_R2"), names_to="variable")
 
 p5 <- ggplot(data=filter(molten_tbl, N==1000, scales_mu==1e-9), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
 p5 <- p5 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
 p5 <- p5 + geom_point(aes(shape=variable), size=4)
-p5 <- p5 + scale_shape_manual(values=c(0, 1, 2, 8), name = "",
-                              labels=c(expression(mu), expression(r), expression(alpha), "Total"))
+p5 <- p5 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
+                              labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
 p5 <- p5 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
 p5 <- p5 + scale_y_continuous(breaks=pretty_breaks())
 p5 <- p5 + labs(title = "Var Explained, N=1000, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
@@ -1534,8 +1532,8 @@ save_plot("selection/single-pop/R2_plot_1.pdf", p5, base_height=10, base_width=1
 p6 <- ggplot(data=filter(molten_tbl, N==1000, scales_mu==1e-8), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
 p6 <- p6 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
 p6 <- p6 + geom_point(aes(shape=variable), size=4)
-p6 <- p6 + scale_shape_manual(values=c(0, 1, 2, 8), name = "",
-                              labels=c(expression(mu), expression(r), expression(alpha), "Total"))
+p6 <- p6 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
+                              labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
 p6 <- p6 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
 p6 <- p6 + scale_y_continuous(breaks=pretty_breaks())
 p6 <- p6 + labs(title = "Var Explained, N=1000, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
@@ -1548,8 +1546,8 @@ save_plot("selection/single-pop/R2_plot_2.pdf", p6, base_height=10, base_width=1
 p7 <- ggplot(data=filter(molten_tbl, N==10000, scales_mu==1e-9), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
 p7 <- p7 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
 p7 <- p7 + geom_point(aes(shape=variable), size=4)
-p7 <- p7 + scale_shape_manual(values=c(0, 1, 2, 8), name = "",
-                              labels=c(expression(mu), expression(r), expression(alpha), "Total"))
+p7 <- p7 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
+                              labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
 p7 <- p7 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
 p7 <- p7 + scale_y_continuous(breaks=pretty_breaks())
 p7 <- p7 + labs(title = "Var Explained, N=10000, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
@@ -1562,8 +1560,8 @@ save_plot("selection/single-pop/R2_plot_3.pdf", p7, base_height=10, base_width=1
 p8 <- ggplot(data=filter(molten_tbl, N==10000, scales_mu==1e-8), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
 p8 <- p8 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
 p8 <- p8 + geom_point(aes(shape=variable), size=4)
-p8 <- p8 + scale_shape_manual(values=c(0, 1, 2, 8), name = "",
-                              labels=c(expression(mu), expression(r), expression(alpha), "Total"))
+p8 <- p8 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
+                              labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
 p8 <- p8 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
 p8 <- p8 + scale_y_continuous(breaks=pretty_breaks())
 p8 <- p8 + labs(title = "Var Explained, N=10000, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
